docs/7.52/md/abendescriptive_functions.md
---
title: "Description Functions for Character-Like Arguments"
description: |
  These functions return a numerical result. -   charlen, dbmaxlen, numofchar, strlen - length functions(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlength_functions.htm) -   char_off - length function(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlength_functi
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendescriptive_functions.htm"
abapFile: "abendescriptive_functions.htm"
keywords: ["do", "try", "data", "abendescriptive", "functions"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_string.htm) →  [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_expr_func.htm) →  [String Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_functions.htm) → 

Description Functions for Character-Like Arguments

These functions return a numerical result.

-   [charlen, dbmaxlen, numofchar, strlen - length functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlength_functions.htm)

-   [char\_off - length function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlength_functions_args.htm)

-   [find, find\_... - search functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensearch_functions.htm)

-   [count, count\_... - search functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencount_functions.htm)

-   [distance - similarity function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendistance_functions.htm)

Note

These functions can be used in suitable [operand positions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexpression_positions.htm), for example directly as an operand of [arithmetic](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenarithmetic_expression_glosry.htm "Glossary Entry") or [relational expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrelational_expression_glosry.htm "Glossary Entry").

Continue
[charlen, dbmaxlen, numofchar, strlen -](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlength_functions.htm)
[char\_off - Length Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlength_functions_args.htm)
[find, find\_... - Search Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensearch_functions.htm)
[count, count\_... - Search Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencount_functions.htm)
[distance - Distance Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendistance_functions.htm)