docs/7.57/md/abendescriptive_functions.md
---
title: "Hint"
description: |
  These functions can be used in suitable operand positions(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenexpression_positions.htm), for example directly as an operand of arithmetic(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarithmetic_expression_glosry.htm 'Gl
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendescriptive_functions.htm"
abapFile: "abendescriptive_functions.htm"
keywords: ["do", "if", "try", "data", "abendescriptive", "functions"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_string.htm) →  [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_expr_func.htm) →  [String Functions (string\_func)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: string_func - Description Functions, ABENDESCRIPTIVE_FUNCTIONS, 757%0D%0A%0D%0AError:
%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

string\_func - Description Functions

These functions return a numeric result.

-   [charlen, dbmaxlen, numofchar, strlen - Length Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlength_functions.htm)
-   [char\_off - Length Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlength_functions_args.htm)
-   [find, find\_... - Search Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensearch_functions.htm)
-   [count, count\_... - Search Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencount_functions.htm)
-   [distance - Distance Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendistance_functions.htm)

Hint

These functions can be used in suitable [operand positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenexpression_positions.htm), for example directly as an operand of [arithmetic](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarithmetic_expression_glosry.htm "Glossary Entry") or [relational expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrelational_expression_glosry.htm "Glossary Entry").

Continue
[string\_func - charlen, dbmaxlen, numofchar, strlen](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlength_functions.htm)
[string\_func - char\_off](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlength_functions_args.htm)
[string\_func - find, find\_...](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensearch_functions.htm)
[string\_func - count, count\_...](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencount_functions.htm)
[string\_func - distance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendistance_functions.htm)